* When in debug mode execute event handlers separately from the loop iterating over them allowing all handlers to execute despite errors that may be thrown. [jddalton]

* Add fuse.debug detection for the window's url containing `fusejs_debug` in the query or `debug` in the fusejs script src query to trigger debug mode. [jddalton]
  Note: fuse.debug will take the value of debug query param. For example, if debug=2 then fuse.debug would equal 2.

* Fix Chrome Date#toJSON throwing errors when its result is not a primitive. [jddalton]

* Ensure decorators are created when fuse.dom.Element#observe is called with a raw element as its `this`. [jddalton, Joe Gornick]

* Avoid a conflict with the document's data id by initializing IE's unqiueNumber property on a dummy element. [jddalton]

* Change fuse.ajax.Updater `insertion` option to `updateBy`. [jddalton]
  Note: Backwards compatibility warning.

* Make script injection via fuse.dom.Element modification methods execute synchronously. [jddalton]

* Add fuse.dom.Element methods. [jddalton]
  - Add appendChildTo
  - Add prependChildTo
  - Add appendSiblingTo
  - Add prependSiblingTo

* Rename fuse.dom.Element methods. [FuseJS LH #73] [jddalton]
  - Rename append to appendChild
  - Rename prepend to prependChild
  - Rename insertAfter to appendSibling
  - Rename insertBefore to prependSibling

* Fix fuse.Fusebox regression with Firefox 1.5 and Safari and cleanup. [jddalton]

* Simplify the private from() function in Fusebox. [jddalton]

* Reduce the prototype chain method lookup by one for the __proto__ fork of Fusebox. [jddalton]

* Allow fuse.Array constructor to throw errors if its passed an invalid length. [jddalton, kangax]

* Remove method wrapping for fuse.Array#sort in the __proto__ fork of Fusebox. [jddalton]

* Reduce the use of strict === in favor of loose ==. [Dmitry Baranovskiy, jddalton]
